--- a/frontend/src/components/Item/Item.module.css
+++ b/frontend/src/components/Item/Item.module.css
@@ -1,25 +1,63 @@
-:root {
-  --card-background-color: #f8f9fa;
-  --card-hover-background-color: #397ec4;
-
-}
-
 .card {
-  background: var(--card-background-color);
-  padding: 0.4rem;
-  transition: transform 0.2s;
+  text-decoration: none;
+  position: relative;
+  display: block;
+  overflow: hidden;
   border-radius: 10px;
-}
-.card img {
-  width: 100%;
-  border-radius: 10px;
-}
-.card-body {
-  padding: 0.7rem;
-  font-size: 1.25rem;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 20rem;
+  height: fit-content;
+  min-height: 5rem;
 }
 
 .card:hover {
-  transform: scale(1.00);
-  background: var(--card-hover-background-color);
+  transform: scale(1.05);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.imageWrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: fit-content;
+  background: rgba(0, 0, 0, 0.568);
+  color: rgb(240, 58, 58);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border-radius: 10px;
+  font-size: 1em;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-ser
+  
+}
+
+.title {
+  margin: 0 0.5rem;
+}
+
+.price {
+  margin: 0 0.5rem;
+}
+
+
+@media (min-width: 1024px) {
+ .card {
+  width: 21rem;
+ }
 }
