--- a/frontend/src/components/Item/Item.module.css
+++ b/frontend/src/components/Item/Item.module.css
@@ -43,7 +43,7 @@
   align-items: flex-start;
   border-radius: 10px;
   font-size: 1em;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-ser
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-ser; */
   
 }
 
