--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;; 
+  --font-family: Georgia, serif;
   --font-size-base: 23px; /* Basstorlek för text */
 }
 
