--- a/frontend/src/components/Item/Item.module.css
+++ b/frontend/src/components/Item/Item.module.css
@@ -36,14 +36,14 @@
   width: 100%;
   height: fit-content;
   background: rgba(0, 0, 0, 0.568);
-  color: rgb(240, 58, 58);
+  color: #a0daf1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   border-radius: 10px;
   font-size: 1em;
-  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-ser; */
+  padding: 0.5rem;
   
 }
 
