--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -10,15 +10,22 @@
   height: 10%;
   z-index: 1;
   background-color: #4c7c7e;
+  border-top: solid 2px #a9a91d
 }
 
 .link {
   text-decoration: none;
   color: #333;
-  /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
   font-size: 27px;
   padding: 1rem;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.number {
+  font-size: 13px;
+  align-self: flex-start;
 }
 
 .linkContainer {
@@ -34,5 +41,7 @@
     top: 0;
     gap: 3rem;
     justify-content: flex-end;
+    border-bottom: solid 2px #a9a91d;
+    border-top: none;
   }
 }
